--- a/otros/bocetos/style_UGR2.css
+++ b/otros/bocetos/style_UGR2.css
@@ -114,7 +114,7 @@ body {
 	display: block;
 	border-radius: 5px;
 	width: 112px;
-	height: 110px;
+	height: 112px;
 	border: var(--borders);
 	align-items: center;
 	text-decoration: none;
@@ -122,14 +122,12 @@ body {
 	padding: 3px;
 }
 
-a.icon:hover, .icon:hover {
+.icon:hover {
 	background-color: rgba(255, 255, 255, 0.1);
 }
 
 .icon .img_frame {
 	display: block;
-	position: absolute;
-	transform: translate(31px, 0);
 	margin: auto;
 	border: var(--borders);
 	border-radius: 50%;
@@ -138,7 +136,6 @@ a.icon:hover, .icon:hover {
 	width: 50px;
 	align-content: center;
 	background-color: rgb(78, 78, 78);
-	z-index: -1;
 }
 
 .img_frame img{
@@ -146,15 +143,12 @@ a.icon:hover, .icon:hover {
 	max-height: 30px; /* Tamaño máximo de alto */
 	width: auto; /* Mantiene la proporción */
 	height: auto; /* Mantiene la proporción */
-	z-index: -1;
 }
 
 .icon_text {
 	display: block;
 	margin-top: 12px;
 	color: white;
-	transform: translate(0, 65px);
-	z-index: -1;
 }
 
 .escritorio {
@@ -172,20 +166,15 @@ a.icon:hover, .icon:hover {
 	background-color: rgba(0, 0, 0, 0.219);
 	padding: 5px;
 	border-radius: 5px;
-	/* font-weight: 600; */
+	font-weight: 600;
 }
 
 .escritorio .izquierda {
 	width: 50%;
 	left: 0;
 	padding: 10px;
-	display: flex;
-	flex-direction: column;
-	gap: 10px;
+	display: block;
 	flex-wrap: wrap;
-	height: 90%;
-	align-content: flex-start;
-	overflow: hidden;
 }
 
 .escritorio .derecha {
@@ -198,86 +187,10 @@ a.icon:hover, .icon:hover {
 	justify-content: right;
 	padding: 10px;
 }
-	
-
-
-/*MENU DESPLEGABLE*/
-
-ul, ol {
-	list-style:none;
-}
-
-.icon {
-	margin: 0;
-}
-
-/*Primer nivel*/
-.icon  li {
-	float:left;
-	position: relative;
-}
-
-.icon li a {
-	background-color:rgb(78, 78, 78);
-	border: 0.2px solid #434343;
-	color:#fff;
-	text-decoration:none;
-	text-align: left;
-	padding:10px 12px;
-	padding-left: 40px;
-	padding-right: 40px;
-	display:block;
-	margin: 0;
-	z-index: 2000;
-}
-
-.icon li {
-	width: 170px;
-	position: relative;
-	z-index: 1000;
-}
-
-/* .icon li ul {
-	display: none;
-	position:absolute;
-	padding: 0;
-	top: 0%;
-	left: 100%;
-} */
-
-.icon > li {
-	display: none;
-	position: relative;
-	left: 100%;
-	top: -30%;
-}
-
-.icon:hover > li {
-	display: block; /*Mostrar la primera capa*/
-}
-
-ul li a:hover{
-	background-color:#434343;
-	display: block;
-	visibility: visible;
-}
-
-/* .icon li:hover > ul{
-	display: block;
-} */
-
-ul:hover > li{
-	display: block;
-}
-
-.icon a:hover{
-	display: block;
-}
 
 /* Estilo iconos menú*/
 a > .icon-left{
-	max-width: 20px;
-	max-height: 20px;
+	width: 20px;
 	padding-right: 10px;
 	position: absolute;
     left: 10px; /* Se pega al borde derecho del contenedor <a> */
@@ -294,57 +207,51 @@ a > .icon-right {
 }
 
 a {
-	z-index: 500;
+	z-index: 3000;
 }
-/***/
-.icon li ul {
-	/* visibility: hidden; */
-	opacity: 0;
-	transition: opacity 0.3s ease;
+
+/*MENU DESPLEGABLE*/
+
+.carpeta ul a{
+	text-decoration: none;
+	color: black;
+}
+
+ul, ol {
+	list-style:none;
+}
+
+.carpeta ul {
 	position: absolute;
-	top: 0%;
-	left: 100%;
-	padding: 0;
+	transform: translate(170px, 0);
 }
 
-.icon li ul {
-    display: none;
-    position: absolute;
-    padding: 0;
-    top: 0%;
-    left: 100%;
-    transition: visibility 1s, opacity 0.2s linear;
-    opacity: 0;
-    visibility: hidden;
+ul li a:hover{
+	background-color:#434343;
+}
+.carpeta ul a {
+	background-color:rgb(78, 78, 78);
+	border: 0.2px solid #434343;
+	color:#fff;
+	text-decoration:none;
+	text-align: left;
+	padding:10px 12px;
+	padding-left: 40px;
+	padding-right: 40px;
+	margin: 0;
+	/* z-index: 2000; */
 }
 
-.icon li:hover > ul {
-    display: block;
-	transition: visibility 1s, opacity 0.2s linear;
-    opacity: 1;
-    visibility: visible;
-}
-
-.icon a:hover {
-	display: block;
-}
-
-.endcolumn {
-	height: 100%;
+.carpeta li{
 	position: relative;
-	width: 112px;
+	width: 170px;
+	transform: translate(-50px, -50px);
+}
+
+.carpeta ul a{
+	display: none;
+}
+
+.carpeta:hover{
 	background-color: white;
-}
-
-.icon:hover{
-	cursor: pointer;
-}
-
-div.icon:hover {
-	background-color: #00000000;
-	cursor: default;
-}
-
-div.icon {
-	visibility: hidden;
 }
